<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ffcd40"
    tools:context="com.example.luis.taxiapp08.PedirTaxi">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:weightSum="1">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:id="@+id/imageView7"
            android:background="@mipmap/app_taxi" />

        <TextView
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numeroTaxis"
            android:id="@+id/textView9"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/primary_dark_material_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editPedirTaxiNumeroTaxis" />

        <TextView
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar"
            android:id="@+id/textView19"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/primary_dark_material_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editPedirTaxiLugar"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:id="@+id/emailpedir"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:textColor="@color/primary_dark_material_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editPedirTaxiFecha"
            android:layout_gravity="center_horizontal" />

        <TextView
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:text="@string/detalle"
            android:textColor="@color/primary_dark_material_dark" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/editPedirTaxiDetalle"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.18"
            android:inputType="text" />

        <Button
            style="@android:style/Animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonlisto"
            android:id="@+id/buttonPedirTaxiListo"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</FrameLayout>
