<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.luis.taxiapp08.NuevoUsuario"
    android:background="#ffcd40"
    android:gravity="center_vertical|center_horizontal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView9"
                android:background="@mipmap/app_taxi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevoUsuarioNombre"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                style="@android:style/TextAppearance" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/textNuevoUsuarioNombre"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName" />

            <TextView
                style="@android:style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevoUsuarioEmail"
                android:id="@+id/text"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/textNuevoUsuarioEmail"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailSubject" />

            <TextView
                style="@android:style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevoUsuarioTelefono"
                android:id="@+id/textView16"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/textNuevoUsuarioTelefono"
                android:layout_gravity="center_horizontal"
                android:inputType="phone"
                android:phoneNumber="true" />

            <TextView
                style="@android:style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevoUsuarioDireccion"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/textNuevoUsuarioDireccion"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="password"
                android:id="@+id/textView"
                android:layout_below="@+id/txtemail"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                style="@android:style/TextAppearance" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/textNuevoUsuarioPassword"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:password="true" />

            <TextView
                style="@android:style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevoUsuarioSexo"
                android:id="@+id/textView17"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOMBRE"
                android:id="@+id/buttonNuevoUsuarioSexo"
                android:layout_below="@+id/txtPass"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonlisto"
                android:id="@+id/btnLogin"
                android:layout_below="@+id/txtPass"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
