<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.luis.taxiapp08.Login"
    android:background="#ffcd40">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/bienvenida"
            android:layout_weight="0.10" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.40" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Usuario"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_dialog_padding_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editLoginUsuario"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:phoneNumber="true" />

        <TextView
            style="@android:style/TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textView3"
            android:layout_below="@+id/editLoginUsuario"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_dialog_padding_material" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editLoginPasword"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:password="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/buttonLogin"
            android:layout_below="@+id/editLoginPasword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soyNuevo"
            android:id="@+id/buttonLoginNuevoU"
            android:layout_below="@+id/editLoginPasword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
